--- a/helm/mongodb/app-configs/mongodb_publishing.yaml
+++ b/helm/mongodb/app-configs/mongodb_publishing.yaml
@@ -5,20 +5,20 @@ replicaCount: 3
 storageGi: 50Gi
 fsType: ext4
 pv0:  
-  region: 
-  zone:
-  name:
-  volumeID: 
-  claimName:
+  region: eu-west-1
+  zone: eu-west-1a
+  name: mongodb-0-vol
+  volumeID: aws://eu-west-1a/vol-013012ae805ba79c4
+  claimName: mongo-persistent-mongodb-0
 pv1:  
-  region: 
-  zone:
-  name:
-  volumeID: 
-  claimName:
+  region: eu-west-1
+  zone: eu-west-1b
+  name: mongodb-1-vol
+  volumeID: aws://eu-west-1b/vol-00c0546b01c1c5aef
+  claimName: mongo-persistent-mongodb-1
 pv2:  
-  region: 
-  zone:
-  name:
-  volumeID: 
-  claimName:
+  region: eu-west-1
+  zone: eu-west-1c
+  name: mongodb-2-vol
+  volumeID: aws://eu-west-1c/vol-0c47028bd6c341d49
+  claimName: mongo-persistent-mongodb-2
