--- a/helm/mongodb/templates/service-1.yaml
+++ b/helm/mongodb/templates/service-1.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.service.name}} 
+  name: {{.Values.service.name}}-1
   labels:
     chart: "{{ .Chart.Name | trunc 63 }}"
     chartVersion: "{{ .Chart.Version | trunc 63 }}"
-    app: {{.Values.service.name}} 
+    app: {{.Values.service.name}}-1
     visualize: "true"
 spec:
   ports:
@@ -17,4 +17,4 @@ spec:
     targetPort: 28017
   clusterIP: None
   selector:
-    app: {{ .Values.service.name }}
+    app: {{ .Values.service.name }}-1
