--- a/helm/mongodb/templates/deployment-0.yaml
+++ b/helm/mongodb/templates/deployment-0.yaml
@@ -18,7 +18,7 @@ spec:
         app: {{.Values.service.name}}-0
     spec:
       terminationGracePeriodSeconds: 30
-      initcontainers:
+      initContainers:
         - name: waitfordns
           image: "alpine:3.6"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
