--- a/helm/mongodb/app-configs/mongodb_delivery.yaml
+++ b/helm/mongodb/app-configs/mongodb_delivery.yaml
@@ -9,16 +9,16 @@ pv0:
   zone: eu-west-1a
   name: mongodb-0-vol
   volumeID: aws://eu-west-1a/vol-0f41bc74177761268
-  claimName: mongo-persistent-mongodb-0
+  claimName: mongodb-pvc-0
 pv1:  
   region: eu-west-1
   zone: eu-west-1b
   name: mongodb-1-vol
   volumeID: aws://eu-west-1b/vol-0583d947a220fddb3
-  claimName: mongo-persistent-mongodb-1
+  claimName: mongodb-pvc-1
 pv2:  
   region: eu-west-1
   zone: eu-west-1c
   name: mongodb-2-vol
   volumeID: aws://eu-west-1c/vol-063166f5c89299da4
-  claimName: mongo-persistent-mongodb-2
+  claimName: mongodb-pvc-2
