--- a/helm/mongodb/templates/service.yaml
+++ b/helm/mongodb/templates/service.yaml
@@ -1,11 +1,13 @@
+{{- range tuple "0" "1" "2" }}
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.service.name}}-2
+  name: {{.Values.service.name}}-{{ . }}
   labels:
     chart: "{{ .Chart.Name | trunc 63 }}"
     chartVersion: "{{ .Chart.Version | trunc 63 }}"
-    app: {{.Values.service.name}}-2
+    app: {{.Values.service.name}}-{{ . }}
     visualize: "true"
   annotations:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
@@ -19,4 +21,5 @@ spec:
     targetPort: 28017
   clusterIP: None
   selector:
-    app: {{ .Values.service.name }}-2
+    app: {{ .Values.service.name }}-{{ . }}
+{{- end }}
