--- a/helm/mongodb/templates/service.yaml
+++ b/helm/mongodb/templates/service.yaml
@@ -1,13 +1,16 @@
+{{- $values :=  .Values }}
+{{- $chart := .Chart }}
+
 {{- range tuple "0" "1" "2" }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.service.name}}-{{ . }}
+  name: {{ $values.service.name }}-{{ . }}
   labels:
-    chart: "{{ .Chart.Name | trunc 63 }}"
-    chartVersion: "{{ .Chart.Version | trunc 63 }}"
-    app: {{.Values.service.name}}-{{ . }}
+    chart: "{{ $chart.Name | trunc 63 }}"
+    chartVersion: "{{ $chart.Version | trunc 63 }}"
+    app: {{ $values.service.name }}-{{ . }}
     visualize: "true"
   annotations:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
@@ -21,5 +24,5 @@ spec:
     targetPort: 28017
   clusterIP: None
   selector:
-    app: {{ .Values.service.name }}-{{ . }}
+    app: {{ $values.service.name }}-{{ . }}
 {{- end }}
