--- a/helm/mongodb/templates/pv.yaml
+++ b/helm/mongodb/templates/pv.yaml
@@ -1,6 +1,6 @@
 {{- $values :=  .Values }}
 
-{{- range $values.pvs }}
+{{- range $index, $pv :=  $values.pvs }}
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -10,23 +10,23 @@ metadata:
     pv.kubernetes.io/bound-by-controller: "yes"
     pv.kubernetes.io/provisioned-by: kubernetes.io/aws-ebs
   labels:
-    failure-domain.beta.kubernetes.io/region: {{ .region }}
-    failure-domain.beta.kubernetes.io/zone: {{ .zone }}
-    provisioned-for: {{ $values.service.name }}-{{ . }}
-  name: {{ .name }}
+    failure-domain.beta.kubernetes.io/region: {{ $pv.region }}
+    failure-domain.beta.kubernetes.io/zone: {{ $pv.zone }}
+    provisioned-for: {{ $values.service.name }}-{{ $index }}
+  name: {{ $pv.name }}
   namespace: "default"
 spec:
   accessModes:
   - ReadWriteOnce
   awsElasticBlockStore:
     fsType: {{ $values.fsType }}
-    volumeID: {{ .volumeID }}
+    volumeID: {{ $pv.volumeID }}
   capacity:
     storage: {{ $values.storageGi }}
   claimRef:
     apiVersion: v1
     kind: PersistentVolumeClaim
-    name: {{ .claimName }}
+    name: {{ $pv.claimName }}
     namespace: default
   persistentVolumeReclaimPolicy: Retain
 {{- end }}
