--- a/helm/mongodb/values.yaml
+++ b/helm/mongodb/values.yaml
@@ -12,21 +12,19 @@ resources:
     memory: 2Gi
 storageGi: "" # how much storage for each node of the DB
 fsType: ext4 # file system type for the storage
-pv0: # persistent volume properties
-  region: ""
-  zone: ""
-  name: ""
-  volumeID: ""
-  claimName: ""
-pv1:  
-  region: ""
-  zone: ""
-  name: ""
-  volumeID: ""
-  claimName: ""
-pv2:  
-  region: ""
-  zone: ""
-  name: ""
-  volumeID: ""
-  claimName: ""
+pvs:
+    - region: ""
+      zone: ""
+      name: ""
+      volumeID: ""
+      claimName: ""
+    - region: ""
+      zone: ""
+      name: ""
+      volumeID: ""
+      claimName: ""
+    - region: ""
+      zone: ""
+      name: ""
+      volumeID: ""
+      claimName: ""
