Explained use of tolerate-unready-endpoints annotation

--- a/helm/mongodb/templates/service.yaml
+++ b/helm/mongodb/templates/service.yaml
@@ -13,6 +13,8 @@ metadata:
     app: {{ $values.service.name }}-{{ . }}
     visualize: "true"
   annotations:
+    # https://github.com/kubernetes/kubernetes/blob/master/pkg/controller/endpoint/endpoints_controller.go#L56
+    # create endpoints for unready pods - mongo needs to resolve the cluster member addresses on startup
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
   ports:
