Added scheduling for mongo on dedicated nodes.

--- a/helm/mongodb/templates/deployment.yaml
+++ b/helm/mongodb/templates/deployment.yaml
@@ -23,6 +23,13 @@ spec:
         app: {{ $values.service.name }}-{{ . }}
     spec:
       terminationGracePeriodSeconds: 30
+      tolerations:
+      # Making sure that Mongo will be scheduled on dedicated nodes. These nodes are tainted by the provisioner.
+      - key: "dedicated"
+        operator: "Equal"
+        value: "mongo"
+        effect: "NoSchedule"
+
       initContainers:
         - name: waitfordns
           image: "alpine:3.6"
