--- a/helm/mongodb/templates/pvc.yaml
+++ b/helm/mongodb/templates/pvc.yaml
@@ -9,6 +9,9 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  resources:
+    requests:
+      storage: {{ $values.storageGi }}
   selector:
     matchLabels:
       provisioned-for: {{ $values.service.name}}-{{ . }}
