--- a/helm/mongodb/templates/storage-class.yaml
+++ b/helm/mongodb/templates/storage-class.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.eksCluster }}
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
@@ -5,3 +6,4 @@ metadata:
 provisioner: kubernetes.io/aws-ebs
 parameters:
   type: gp2
+{{- end }}
