--- a/helm/mongodb/values.yaml
+++ b/helm/mongodb/values.yaml
@@ -3,12 +3,17 @@
 # Declare variables to be passed into your templates.
 service:
   name: "" # The name of the service, should be defined in the specific app-configs folder.
+
+eksCluster: false
+
 image:
   repository: coco/coco-mongodb
   pullPolicy: IfNotPresent
+
 resources:
   limits:
     memory: 6Gi
   requests:
     memory: 4Gi
+
 storageGi: 50Gi # how much storage for each node of the DB
