--- a/helm/mongodb/templates/deployment.yaml
+++ b/helm/mongodb/templates/deployment.yaml
@@ -3,7 +3,11 @@
 
 {{- range tuple "0" "1" "2" }}
 ---
+{{- if .Values.eksCluster }}
 apiVersion: apps/v1
+{{- else }}
+apiVersion: extensions/v1beta1
+{{- end }}
 kind: Deployment
 metadata:
   name: {{ $values.service.name }}-{{ . }}
