--- a/helm/mongodb/templates/deployment.yaml
+++ b/helm/mongodb/templates/deployment.yaml
@@ -3,7 +3,11 @@
 
 {{- range tuple "0" "1" "2" }}
 ---
+{{- if $values.eksCluster }}
+apiVersion: apps/v1
+{{- else }}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: Deployment
 metadata:
   name: {{ $values.service.name }}-{{ . }}
@@ -23,6 +27,23 @@ spec:
         app: {{ $values.service.name }}-{{ . }}
     spec:
       terminationGracePeriodSeconds: 30
+{{- if $values.eksCluster }}
+      tolerations:
+      # Making sure that Mongo will be scheduled on dedicated nodes. These nodes are tainted and labeled by the provisioner.
+      - key: "mongo"
+        operator: "Equal"
+        value: "false"
+        effect: "NoSchedule"
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: role
+                operator: In
+                values:
+                - "mongo"
+{{- else }}
       tolerations:
       # Making sure that Mongo will be scheduled on dedicated nodes. These nodes are tainted and labeled by the provisioner.
       - key: "dedicated"
@@ -38,6 +59,7 @@ spec:
                 operator: In
                 values:
                 - mongo-worker
+{{- end }}
       initContainers:
         - name: waitfordns
           image: "alpine:3.6"
@@ -47,7 +69,7 @@ spec:
             - -c
             - "i=0; while [ $i -lt 120 ]; do ping -c1 {{ $values.service.name }}-{{ . }} && break; let i=i+1; sleep 1; done"
       containers:
-      - name: {{ $values.service.name }} 
+      - name: {{ $values.service.name }}
         image: "{{ $values.image.repository }}:{{ $chart.Version }}"
         resources:
 {{ toYaml $values.resources | indent 12 }}
