--- a/mongod.conf
+++ b/mongod.conf
@@ -7,4 +7,7 @@ journal = true
 httpinterface = true
 rest = true
 replSet = content-up
-
+storage:
+   wiredTiger:
+      engineConfig:
+         cacheSizeGB: 3
