--- a/mongod.conf
+++ b/mongod.conf
@@ -1,13 +1,20 @@
-bind_ip = 0.0.0.0
-port = 27017
-fork = false
-#logpath = /var/log/mongodb/mongodb.log
-#dbpath =/data/db/
-journal = true
-httpinterface = true
-rest = true
-replSet = content-up
+net:
+  port: 27017
+  bind_ip: "0.0.0.0"
+
+processManagement:
+  fork: false
+  
+http:
+  enabled: true
+  RESTInterfaceEnabled: true
+
+replication:
+   replSetName: content-up
+   
 storage:
-   wiredTiger:
+  journal: 
+    enabled: true
+    wiredTiger:
       engineConfig:
-         cacheSizeGB: 3
+        cacheSizeGB: 3
