--- a/mongod.conf
+++ b/mongod.conf
@@ -1,6 +1,6 @@
 net:
   port: 27017
-  bind_ip: "0.0.0.0"
+  bindIp: "0.0.0.0"
 
 processManagement:
   fork: false
@@ -10,7 +10,7 @@ http:
   RESTInterfaceEnabled: true
 
 replication:
-   replSetName: content-up
+  replSetName: content-up
    
 storage:
   journal: 
