--- a/mongod.conf
+++ b/mongod.conf
@@ -12,8 +12,6 @@ replication:
   replSetName: content-up
    
 storage:
+  engine: mmapv1
   journal: 
     enabled: true
-  wiredTiger:
-    engineConfig:
-      cacheSizeGB: 5
