--- a/helm/mongodb/templates/service.yaml
+++ b/helm/mongodb/templates/service.yaml
@@ -1,7 +1,7 @@
 {{- $values :=  .Values }}
 {{- $chart := .Chart }}
 
-{{- range tuple "0" "1" "2" }}
+{{- range tuple "2" }}
 ---
 apiVersion: v1
 kind: Service
