--- a/helm/mongodb/templates/deployment.yaml
+++ b/helm/mongodb/templates/deployment.yaml
@@ -1,7 +1,7 @@
 {{- $values :=  .Values }}
 {{- $chart := .Chart }}
 
-{{- range tuple "0" }}
+{{- range tuple "0" "1" "2" }}
 ---
 apiVersion: apps/v1
 kind: Deployment
