--- a/helm/mongodb/templates/pvc.yaml
+++ b/helm/mongodb/templates/pvc.yaml
@@ -1,6 +1,6 @@
 {{- $values :=  .Values }}
 
-{{- range tuple "0" }}
+{{- range tuple "0" "1" "2" }}
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
