--- a/helm/mongodb/templates/pvc.yaml
+++ b/helm/mongodb/templates/pvc.yaml
@@ -14,4 +14,7 @@ spec:
   resources:
     requests:
       storage: {{ $values.storageGi }}
+  selector:
+    matchLabels:
+      provisioned-for: {{ $values.service.name}}-{{ . }}
 {{- end }}
